- Review restaurants using emojis

--- a/RestuarantRecommendations/RestuarantRecommendations/Base.lproj/Main.storyboard
+++ b/RestuarantRecommendations/RestuarantRecommendations/Base.lproj/Main.storyboard
@@ -525,6 +525,9 @@
                                                     <integer key="value" value="25"/>
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
+                                            <connections>
+                                                <segue destination="a8d-Hd-FKg" kind="presentation" identifier="showReview" id="GVn-FN-zuL"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -682,14 +685,112 @@
             </objects>
             <point key="canvasLocation" x="2020" y="656"/>
         </scene>
+        <!--Review View Controller-->
+        <scene sceneID="PQv-R3-cdr">
+            <objects>
+                <viewController id="a8d-Hd-FKg" customClass="ReviewViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KSh-G6-3Ro">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ban-sY-drz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nVW-b7-N1R">
+                                <rect key="frame" x="319" y="28" width="33" height="32"/>
+                                <state key="normal" image="cross"/>
+                                <connections>
+                                    <segue destination="aGq-Gz-7D5" kind="unwind" unwindAction="closeWithSegue:" id="gG2-FL-lgh"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Rw4-1j-McO">
+                                <rect key="frame" x="76" y="93" width="223" height="481"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yay-OF-Kjy">
+                                        <rect key="frame" x="0.0" y="0.0" width="187" height="82"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="50"/>
+                                        <state key="normal" title="Love" image="love"/>
+                                        <connections>
+                                            <segue destination="aGq-Gz-7D5" kind="unwind" identifier="love" unwindAction="rateRestaurantWithSegue:" id="MEd-Jo-fT3"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fyu-07-ezn">
+                                        <rect key="frame" x="0.0" y="92" width="181" height="83"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="50"/>
+                                        <state key="normal" title="Cool" image="cool"/>
+                                        <connections>
+                                            <segue destination="aGq-Gz-7D5" kind="unwind" identifier="cool" unwindAction="rateRestaurantWithSegue:" id="it4-Mb-Vvu"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tyb-2U-sIZ">
+                                        <rect key="frame" x="0.0" y="185" width="223" height="86"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="50"/>
+                                        <state key="normal" title="Happy" image="happy"/>
+                                        <connections>
+                                            <segue destination="aGq-Gz-7D5" kind="unwind" identifier="happy" unwindAction="rateRestaurantWithSegue:" id="jM6-ch-NOp"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBI-6g-QhR">
+                                        <rect key="frame" x="0.0" y="281" width="167" height="87"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="50"/>
+                                        <state key="normal" title="Sad" image="sad"/>
+                                        <connections>
+                                            <segue destination="aGq-Gz-7D5" kind="unwind" identifier="sad" unwindAction="rateRestaurantWithSegue:" id="YXW-0j-dHc"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wbE-BV-oRS">
+                                        <rect key="frame" x="0.0" y="378" width="209" height="103"/>
+                                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="50"/>
+                                        <state key="normal" title="Angry" image="angry"/>
+                                        <connections>
+                                            <segue destination="aGq-Gz-7D5" kind="unwind" identifier="angry" unwindAction="rateRestaurantWithSegue:" id="LTr-Ik-MnV"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ban-sY-drz" firstAttribute="top" secondItem="KSh-G6-3Ro" secondAttribute="top" id="6vy-xH-1Kw"/>
+                            <constraint firstItem="ban-sY-drz" firstAttribute="bottom" secondItem="BZl-k3-J3r" secondAttribute="bottom" id="Epe-Zm-7hs"/>
+                            <constraint firstItem="nVW-b7-N1R" firstAttribute="top" secondItem="KSh-G6-3Ro" secondAttribute="top" constant="28" id="KYI-k3-laS"/>
+                            <constraint firstItem="Rw4-1j-McO" firstAttribute="centerX" secondItem="KSh-G6-3Ro" secondAttribute="centerX" id="S0t-Za-Gra"/>
+                            <constraint firstItem="Rw4-1j-McO" firstAttribute="centerY" secondItem="KSh-G6-3Ro" secondAttribute="centerY" id="SnL-Vc-NKK"/>
+                            <constraint firstItem="ban-sY-drz" firstAttribute="leading" secondItem="BZl-k3-J3r" secondAttribute="leading" id="bmG-h4-pbO"/>
+                            <constraint firstItem="ban-sY-drz" firstAttribute="trailing" secondItem="BZl-k3-J3r" secondAttribute="trailing" id="oAi-yF-60Y"/>
+                            <constraint firstItem="BZl-k3-J3r" firstAttribute="trailing" secondItem="nVW-b7-N1R" secondAttribute="trailing" constant="23" id="z0G-Hf-0Nu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BZl-k3-J3r"/>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="ban-sY-drz" id="rdL-cG-dlp"/>
+                        <outlet property="closeButton" destination="nVW-b7-N1R" id="cdf-mI-MAj"/>
+                        <outletCollection property="rateButtons" destination="yay-OF-Kjy" collectionClass="NSMutableArray" id="U3d-1x-0Qr"/>
+                        <outletCollection property="rateButtons" destination="fyu-07-ezn" collectionClass="NSMutableArray" id="uqK-zf-g9a"/>
+                        <outletCollection property="rateButtons" destination="tyb-2U-sIZ" collectionClass="NSMutableArray" id="4Zd-g5-FRn"/>
+                        <outletCollection property="rateButtons" destination="qBI-6g-QhR" collectionClass="NSMutableArray" id="Yen-8V-7SX"/>
+                        <outletCollection property="rateButtons" destination="wbE-BV-oRS" collectionClass="NSMutableArray" id="1hM-Qx-65z"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nAJ-Nk-r1K" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="aGq-Gz-7D5" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="3020" y="656"/>
+        </scene>
     </scenes>
     <resources>
+        <image name="angry" width="78" height="103"/>
         <image name="close" width="16" height="16"/>
+        <image name="cool" width="78" height="83"/>
+        <image name="cross" width="33" height="32"/>
         <image name="empty" width="16" height="16"/>
         <image name="favorite" width="22" height="22"/>
+        <image name="happy" width="78" height="86"/>
         <image name="heart-tick" width="22" height="21"/>
+        <image name="love" width="78" height="82"/>
         <image name="photo" width="24" height="18"/>
         <image name="plus" width="16" height="16"/>
+        <image name="sad" width="78" height="87"/>
         <image name="save" width="20" height="20"/>
     </resources>
 </document>
