--- a/RestuarantRecommendations/RestuarantRecommendations/Base.lproj/Main.storyboard
+++ b/RestuarantRecommendations/RestuarantRecommendations/Base.lproj/Main.storyboard
@@ -661,6 +661,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="mapView" destination="0ky-7K-zdz" id="bI1-hf-5X4"/>
+                                            <segue destination="i4T-jN-HmB" kind="show" identifier="showMap" id="N1t-6j-fia"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -775,7 +776,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nAJ-Nk-r1K" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="aGq-Gz-7D5" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3020" y="656"/>
+            <point key="canvasLocation" x="3143" y="1080"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="DEr-Cp-z44">
+            <objects>
+                <viewController id="i4T-jN-HmB" customClass="MapViewController" customModule="FoodPin" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wHV-bC-NaS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="XKX-yV-j5A">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XKX-yV-j5A" firstAttribute="top" secondItem="wHV-bC-NaS" secondAttribute="top" id="3jX-fI-E0F"/>
+                            <constraint firstItem="XKX-yV-j5A" firstAttribute="leading" secondItem="Qtk-eu-9sa" secondAttribute="leading" id="7qh-0w-nY3"/>
+                            <constraint firstItem="XKX-yV-j5A" firstAttribute="trailing" secondItem="Qtk-eu-9sa" secondAttribute="trailing" id="cA6-bh-jRW"/>
+                            <constraint firstItem="XKX-yV-j5A" firstAttribute="bottom" secondItem="Qtk-eu-9sa" secondAttribute="bottom" id="mxU-2M-a8V"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Qtk-eu-9sa"/>
+                    </view>
+                    <connections>
+                        <outlet property="mapView" destination="XKX-yV-j5A" id="cVv-dl-pdf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1b9-Ur-gqa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3142" y="409"/>
         </scene>
     </scenes>
     <resources>
